--- a/backup_configuration.yml
+++ b/backup_configuration.yml
@@ -5,7 +5,7 @@
 
   tasks:
   - set_fact:
-      date: '{{ lookup("pipe", "date -v-8H +%Y-%m-%d") }}'
+      date: '{{ lookup("pipe", "TZ=America/Los_Angeles date +%Y-%m-%d") }}'
     run_once: true
 
   - name: Create directory
