--- a/playbooks/execute_op_command.yml
+++ b/playbooks/execute_op_command.yml
@@ -3,7 +3,7 @@
   gather_facts: false
 
   tasks:
-    - name: Run exec command
+    - name: Execute Operational Command
       ios_command:
         commands: "{{ command }}"
       register: result
