--- a/playbooks/get_device_state_snapshot.yml
+++ b/playbooks/get_device_state_snapshot.yml
@@ -23,6 +23,13 @@
       ansible.builtin.set_fact:
         device_state_snapshot_main: "{{ playbook_dir }}/output/{{ inventory_hostname_short }}_device_state_snapshot_{{ date }}.txt"
         device_state_snapshot_running_config: "{{ playbook_dir }}/output/{{ inventory_hostname_short }}_device_state_snapshot_running_config_{{ date }}.txt"
+        device_state_snapshot_running_config_csv: "{{ playbook_dir }}/output/{{ inventory_hostname_short }}_device_state_snapshot_running_config_{{ date }}.csv"
+        device_state_snapshot_version: "{{ playbook_dir }}/output/{{ inventory_hostname_short }}_device_state_snapshot_version_{{ date }}.csv"
+        device_state_snapshot_interfaces: "{{ playbook_dir }}/output/{{ inventory_hostname_short }}_device_state_snapshot_interfaces_{{ date }}.csv"
+        device_state_snapshot_arp_cache: "{{ playbook_dir }}/output/{{ inventory_hostname_short }}_device_state_snapshot_arp_cache_{{ date }}.csv"
+        device_state_snapshot_route_table: "{{ playbook_dir }}/output/{{ inventory_hostname_short }}_device_state_snapshot_route_table_{{ date }}.csv"
+        device_state_snapshot_ospf_neighbors: "{{ playbook_dir }}/output/{{ inventory_hostname_short }}_device_state_snapshot_ospf_neighbors_{{ date }}.csv"
+        device_state_snapshot_bgp_neighbors: "{{ playbook_dir }}/output/{{ inventory_hostname_short }}_device_state_snapshot_bgp_neighbors_{{ date }}.csv"
 
     - name: Ensure Output Directory Exists
       ansible.builtin.file:
@@ -81,6 +88,78 @@
         dest: "{{ device_state_snapshot_running_config }}"
       delegate_to: localhost
       when: save_config | bool
+
+    - name: Render Running Configuration CSV Template
+      ansible.builtin.template:
+        src: templates/device_state_snapshot/running_config_csv.j2
+        dest: "{{ device_state_snapshot_running_config_csv }}"
+      delegate_to: localhost
+      when: save_config | bool
+
+    - name: Render Version Template
+      ansible.builtin.template:
+        src: templates/device_state_snapshot/version.j2
+        dest: "{{ device_state_snapshot_version }}"
+      delegate_to: localhost
+
+    - name: Render Interface Template
+      ansible.builtin.template:
+        src: templates/device_state_snapshot/interfaces.j2
+        dest: "{{ device_state_snapshot_interfaces }}"
+      delegate_to: localhost
+
+    - name: Render ARP Cache Template
+      ansible.builtin.template:
+        src: templates/device_state_snapshot/arp_cache.j2
+        dest: "{{ device_state_snapshot_arp_cache }}"
+      delegate_to: localhost
+
+    - name: Render Route Table Template
+      ansible.builtin.template:
+        src: templates/device_state_snapshot/route_table.j2
+        dest: "{{ device_state_snapshot_route_table }}"
+      delegate_to: localhost
+
+    - name: Render OSPF Neighbors Template
+      ansible.builtin.template:
+        src: templates/device_state_snapshot/ospf_neighbors.j2
+        dest: "{{ device_state_snapshot_ospf_neighbors }}"
+      delegate_to: localhost
+
+    - name: Render BGP Neighbors Template
+      ansible.builtin.template:
+        src: templates/device_state_snapshot/bgp_neighbors.j2
+        dest: "{{ device_state_snapshot_bgp_neighbors }}"
+      delegate_to: localhost
+
+    - name: Merge CSV Files into an Excel Workbook
+      command: /usr/bin/python3
+      args:
+        stdin: |
+          from pathlib import Path
+          import pandas as pd
+
+          p = Path("{{ playbook_dir }}/output")
+          with pd.ExcelWriter("{{ playbook_dir }}/output/{{ inventory_hostname_short }}_device_state_snapshot_{{ date }}.xlsx", engine="xlsxwriter") as writer:
+              wb = writer.book
+              cell_format = wb.add_format()
+              cell_format.set_font_name("Consolas")
+              for f in sorted(p.glob("*.csv")):
+                  df = pd.read_csv(f)
+                  sheet_name = str(f).replace("{{ playbook_dir }}/output/{{ inventory_hostname_short }}_device_state_snapshot_", "").replace("_{{ date }}.csv", "")
+                  df.to_excel(writer, sheet_name=sheet_name, index=False)
+                  worksheet = writer.sheets[sheet_name]
+                  # Get the dimensions of the dataframe
+                  (max_row, max_col) = df.shape
+                  # Get column headers
+                  column_settings = [{"header": column} for column in df.columns]
+                  # Add Excel table
+                  worksheet.add_table(0, 0, max_row, max_col - 1, {"columns": column_settings, "style": "Table Style Medium 2"})
+                  # Resize columns for better readability
+                  for idx, col in enumerate(df):
+                      series = df[col]
+                      max_len = max((series.astype(str).map(len).max(),len(str(series.name)))) + 3
+                      worksheet.set_column(idx, idx, max_len, cell_format)
 
     - name: Find Files to Attach
       ansible.builtin.find:
