--- a/playbooks/test_run_exec_command.yml
+++ b/playbooks/test_run_exec_command.yml
@@ -4,7 +4,7 @@
 
   tasks:
     - name: Run exec command
-      ios_command:
+      cisco.ios.ios_command:
         commands: "{{ command }}"
       register: result
 
