--- a/playbooks/no_shutdown_interface.yml
+++ b/playbooks/no_shutdown_interface.yml
@@ -4,12 +4,12 @@
 
   tasks:
     - name: No shutdown interface
-      ios_config:
+      cisco.ios.ios_config:
         lines:
           - no shutdown
         parents: interface {{ item }}
       with_items: "{{ interfaces }}"
 
     - name: Save running configuration when modified
-      ios_config:
+      cisco.ios.ios_config:
         save_when: modified
