update playbook modules to use the FQCN

--- a/playbooks/test_run_exec_command.yml
+++ b/playbooks/test_run_exec_command.yml
@@ -8,5 +8,5 @@
         commands: "{{ command }}"
       register: result
 
-    - debug:
+    - ansible.builtin.debug:
         var: result.stdout_lines[0]
