--- a/playbooks/snow_attach_device_state_snapshot.yml
+++ b/playbooks/snow_attach_device_state_snapshot.yml
@@ -108,3 +108,4 @@
         number: "{{ snow_incident }}"
         attachments:
           - path: "{{ device_state_snapshot_xlsx }}"
+            type: officedocument.spreadsheetml.sheet
