Update playbook name

--- a/playbooks/snow_attach_device_state_snapshot.yml
+++ b/playbooks/snow_attach_device_state_snapshot.yml
@@ -1,5 +1,5 @@
 ---
-- name: Get Device State Snapshot
+- name: Attach Device State Snapshot to ServiceNow Incident
   hosts: all
   connection: local
   gather_facts: false
