--- a/playbooks/snow_attach_device_state_snapshot.yml
+++ b/playbooks/snow_attach_device_state_snapshot.yml
@@ -1,6 +1,6 @@
 ---
 - name: Attach Device State Snapshot to ServiceNow Incident
-  hosts: all
+  hosts: "{{ configuration_item }}"
   connection: local
   gather_facts: false
 
