--- a/playbooks/get_device_state_snapshot.yml
+++ b/playbooks/get_device_state_snapshot.yml
@@ -1,6 +1,6 @@
 ---
 - name: Get Device State Snapshot
-  hosts: all
+  hosts: "{{ hosts_limit | lower }}"
   connection: local
   gather_facts: false
 
