--- a/playbooks/test_snow_incident_update.yml
+++ b/playbooks/test_snow_incident_update.yml
@@ -1,6 +1,6 @@
 ---
 - name: Test ServiceNow Incident Update
-  hosts: all
+  hosts: "{{ configuration_item | lower }}"
   connection: local
   gather_facts: false
 
