Implement store diagnotic reporting

--- a/playbooks/get_device_state_snapshot.yml
+++ b/playbooks/get_device_state_snapshot.yml
@@ -55,7 +55,7 @@
       delegate_to: localhost
 
     - name: Merge CSV Files into an Excel Workbook
-      command: /usr/bin/python3
+      ansible.builtin.command: /usr/bin/python3
       args:
         stdin: |
           from pathlib import Path
