--- a/playbooks/roles/output/tasks/main.yml
+++ b/playbooks/roles/output/tasks/main.yml
@@ -1,26 +1,26 @@
 ---
 # tasks file for common
-- name: Get Current Date/Time
+- name: Fetching current date/time
   ansible.builtin.command:
     cmd: env TZ="America/Los_Angeles" date +"%Y%m%dT%H%m%S"
   changed_when: false
   register: date_output
 
-- name: Set Timestamp Fact
+- name: Setting timestamp fact
   ansible.builtin.set_fact:
     timestamp: "{{ date_output.stdout }}"
 
-- name: Set Output Directory Fact
+- name: Setting output_dir fact
   ansible.builtin.set_fact:
     output_dir: "{{playbook_dir}}/output/{{ inventory_hostname_short }}"
 
-- name: Remove Output Directory
+- name: Removing output directory
   ansible.builtin.file:
     state: absent
     path: "{{ output_dir }}"
   delegate_to: localhost
 
-- name: Create Output Directory
+- name: Creating output directory
   ansible.builtin.file:
     state: directory
     path: "{{ output_dir }}"
