--- a/playbooks/snow_attach_store_diagnostic_report.yml
+++ b/playbooks/snow_attach_store_diagnostic_report.yml
@@ -6,6 +6,24 @@
     - output
 
   tasks:
+    - name: Creating panos-cli configuration file
+      ansible.builtin.copy:
+        dest: /home/runner/.panos-cli.yml
+        content: |
+          apikey: "{{ panw_api_token }}"
+          user: "{{ panw_user }}"
+          password: "{{ panw_password }}"
+      no_log: true
+
+    - name: Creating ios-cli configuration file
+      ansible.builtin.copy:
+        dest: /home/runner/.ios-cli.yml
+        content: |
+          apikey: "{{ panw_api_token }}"
+          user: "{{ ansible_user }}"
+          password: "{{ ansible_ssh_pass }}"
+      no_log: true
+
     - name: Importing tasks
       ansible.builtin.include_tasks: "{{ item }}"
       loop:
